--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,42 +1,45 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+header{
+  text-align: center;
+}
+header a{
+  margin:0 30px;
+}
+header + div{
+  background-color: #eee;
+  padding:40px;
+  margin-top:30px;
+}
+#__next{
+  width:60%;
+  margin:0 auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.preview{
+  width:300px; height:300px;
+  border:1px solid black;
+  position: relative;
+}
+.preview img{
+  width:100%; height:100%;
+  object-fit: cover;
+}
+.preview button{
+  position:absolute; left:50%; top:50%;
+  transform: translate(-50%,-50%);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.loading{
+  position:absolute;
+  left:50%; top:50%;
+  transform: translate(-50%,-50%);
 }
+.loading img{width:100px;}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.firebase-list{
+   margin:0; padding:0; list-style-type: none;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+.firebase-list figure{margin:0;}
+.firebase-list img{width:30%;}
